Fix footer logo squish

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -344,7 +344,7 @@ footer a {
 }
 
 footer img {
-    height: 50px;
+    height: 4em;
 }
 
 
